Removed unnecessary mockito dependency